---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2024-05-04
  Changes:
    - Migrated custom color settings to `color-setting`, allowing for the use of a color picker in-game
    - Significant rework of internals (ongoing), and the API is being reworked.
      - Some old API functions have been marked deprecated, and will be removed in a future version.
      - The entire old API surface will be deprecated (eventually), and removed in a later version.
---------------------------------------------------------------------------------------------------
Version: 2.1.7
Date: 2023-12-24
  Bugfixes:
    - Fixed that parsing of Angels pipe materials was not returning the expected file paths
---------------------------------------------------------------------------------------------------
Version: 2.1.6
Date: 2023-12-23
  Features:
    - Added `reskins.lib.add_tier_labels_to_entity`
    - Added `reskins.lib.add_tier_labels_to_icons`
    - Added `reskins.lib.get_icons_from_entity`
      - Use to get a table of IconData from an entity, regardless of how an icon is formatted
    - Added `reskins.lib.convert_icons_to_sprite`
    - Added `reskins.lib.convert_icon_to_sprite`
    - Added `reskins.lib.sprites.pipes.get_pipe_pictures`, 
    - Added `reskins.lib.sprites.pipes.get_pipe_to_ground_pictures`
    - Added `reskins.lib.sprites.pipes.get_pipe_covers`
  Changes:
    - Added AAI Loaders to the list of supported mods
  Deprecated:
    - Deprecated `reskins.lib.append_tier_labels_to_vanilla_icon`, use `reskins.lib.add_tier_labels_to_entity`
    - Deprecated `reskins.lib.append_tier_labels`, use `reskins.lib.add_tier_labels_to_icons`
      - Note that the new function returns a modified icons table, it does not modify the table in place